2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Fix indirect tcp.

2012-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Handle indirect tcp.
	* device-src/ndmp-device.c: Add INDIRECT property.
	* installcheck/Amanda_Device.pl: Test indirect tcp.
	* man/xml-source/amanda-devices.7.xml: Document INDIRECT property.
	* ndmp-src/ndmp4_translate.c: remove debugging statement.

2012-05-01  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amfetchdump.8.xml: Add --decrypt, --no-decrypt,
	  --server-decrypt, --client-decrypt, --compress, --no-compress,
	  --server-compress, --client-compress.
	* server-src/amfetchdump.pl: Document new options.

2012-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmos.h: Define NDMOS_MACRO_FREE
	* ndmp-src/ndmos_glib.h: Define NDMOS_MACRO_FREE
	* ndmp-src/ndmp_translate.h: define CNVT_FREE.
	* ndmp-src/ndmp4_translate.c:#Add many free function.

2012-04-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix.

2012-04-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Fix handling of optional arguments.
	* installcheck/amadmin.pl: Check it.

2012-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/amdump_client.pl: Fix warning.

2012-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: add --decompress and --decrypt options.
	* man/xml-source/amfetchdump.8.xml: Document new options.

2012-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Parse MAX_WARNINGS in dumptype.
	* common-src/conffile.h: Add DUMPTYPE_MAX_WARNINGS and
	  dumptype_get_max_warnings
	* man/xml-source/amanda.conf.5.xml: Document max_warning in dumptype.
	* perl/Amanda/Config.swg: Add DUMPTYPE_MAX_WARNINGS.
	* server-src/diskfile.c (add_disk): Copy max_warnings from dumptype.
	* server-src/diskfile.h: Add max_warnings in disk_t.