@@ -1905,7 +1905,14 @@ compile_regexes(void)
 
 gboolean s3_init(void)
 {
+#if (GLIB_MAJOR_VERSION > 2 || (GLIB_MAJOR_VERSION == 2 && GLIB_MINOR_VERSION >= 31))
+# pragma GCC diagnostic push
+# pragma GCC diagnostic ignored "-Wmissing-field-initializers"
     static GStaticMutex mutex = G_STATIC_MUTEX_INIT;
+# pragma GCC diagnostic pop
+#else
+    static GStaticMutex mutex = G_STATIC_MUTEX_INIT;
+#endif
     static gboolean init = FALSE, ret;
 
     /* n.b. curl_global_init is called in common-src/glib-util.c:glib_init() */
